gitlab/gitlab-service-ssh.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service-ssh
  namespace: gitlab
  labels:
    app: gitlab
spec:
  ports:
  - port: 22
    targetPort: 22
    protocol: TCP
    nodePort: 31330
  selector:
    app: gitlab
  type: NodePort
