gitlab/gitlab-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: gitlab
  labels:
    app: gitlab
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: gitlab
